--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -1,6 +1,95 @@
 ### YamlMime:XRefMap
 sorted: true
 references:
+- uid: CG.Business.Models
+  name: CG.Business.Models
+  href: api/CG.Business.Models.html
+  commentId: N:CG.Business.Models
+  fullName: CG.Business.Models
+  nameWithType: CG.Business.Models
+- uid: CG.Business.Models.ModelBase
+  name: ModelBase
+  href: api/CG.Business.Models.ModelBase.html
+  commentId: T:CG.Business.Models.ModelBase
+  fullName: CG.Business.Models.ModelBase
+  nameWithType: ModelBase
+- uid: CG.Business.Models.ModelBase`1
+  name: ModelBase<T>
+  href: api/CG.Business.Models.ModelBase-1.html
+  commentId: T:CG.Business.Models.ModelBase`1
+  name.vb: ModelBase(Of T)
+  fullName: CG.Business.Models.ModelBase<T>
+  fullName.vb: CG.Business.Models.ModelBase(Of T)
+  nameWithType: ModelBase<T>
+  nameWithType.vb: ModelBase(Of T)
+- uid: CG.Business.Models.ModelBase`1.Equals(System.Object)
+  name: Equals(Object)
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_Equals_System_Object_
+  commentId: M:CG.Business.Models.ModelBase`1.Equals(System.Object)
+  fullName: CG.Business.Models.ModelBase<T>.Equals(System.Object)
+  fullName.vb: CG.Business.Models.ModelBase(Of T).Equals(System.Object)
+  nameWithType: ModelBase<T>.Equals(Object)
+  nameWithType.vb: ModelBase(Of T).Equals(Object)
+- uid: CG.Business.Models.ModelBase`1.Equals*
+  name: Equals
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_Equals_
+  commentId: Overload:CG.Business.Models.ModelBase`1.Equals
+  isSpec: "True"
+  fullName: CG.Business.Models.ModelBase<T>.Equals
+  fullName.vb: CG.Business.Models.ModelBase(Of T).Equals
+  nameWithType: ModelBase<T>.Equals
+  nameWithType.vb: ModelBase(Of T).Equals
+- uid: CG.Business.Models.ModelBase`1.GetHashCode
+  name: GetHashCode()
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_GetHashCode
+  commentId: M:CG.Business.Models.ModelBase`1.GetHashCode
+  fullName: CG.Business.Models.ModelBase<T>.GetHashCode()
+  fullName.vb: CG.Business.Models.ModelBase(Of T).GetHashCode()
+  nameWithType: ModelBase<T>.GetHashCode()
+  nameWithType.vb: ModelBase(Of T).GetHashCode()
+- uid: CG.Business.Models.ModelBase`1.GetHashCode*
+  name: GetHashCode
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_GetHashCode_
+  commentId: Overload:CG.Business.Models.ModelBase`1.GetHashCode
+  isSpec: "True"
+  fullName: CG.Business.Models.ModelBase<T>.GetHashCode
+  fullName.vb: CG.Business.Models.ModelBase(Of T).GetHashCode
+  nameWithType: ModelBase<T>.GetHashCode
+  nameWithType.vb: ModelBase(Of T).GetHashCode
+- uid: CG.Business.Models.ModelBase`1.Id
+  name: Id
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_Id
+  commentId: P:CG.Business.Models.ModelBase`1.Id
+  fullName: CG.Business.Models.ModelBase<T>.Id
+  fullName.vb: CG.Business.Models.ModelBase(Of T).Id
+  nameWithType: ModelBase<T>.Id
+  nameWithType.vb: ModelBase(Of T).Id
+- uid: CG.Business.Models.ModelBase`1.Id*
+  name: Id
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_Id_
+  commentId: Overload:CG.Business.Models.ModelBase`1.Id
+  isSpec: "True"
+  fullName: CG.Business.Models.ModelBase<T>.Id
+  fullName.vb: CG.Business.Models.ModelBase(Of T).Id
+  nameWithType: ModelBase<T>.Id
+  nameWithType.vb: ModelBase(Of T).Id
+- uid: CG.Business.Models.ModelBase`1.ToString
+  name: ToString()
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_ToString
+  commentId: M:CG.Business.Models.ModelBase`1.ToString
+  fullName: CG.Business.Models.ModelBase<T>.ToString()
+  fullName.vb: CG.Business.Models.ModelBase(Of T).ToString()
+  nameWithType: ModelBase<T>.ToString()
+  nameWithType.vb: ModelBase(Of T).ToString()
+- uid: CG.Business.Models.ModelBase`1.ToString*
+  name: ToString
+  href: api/CG.Business.Models.ModelBase-1.html#CG_Business_Models_ModelBase_1_ToString_
+  commentId: Overload:CG.Business.Models.ModelBase`1.ToString
+  isSpec: "True"
+  fullName: CG.Business.Models.ModelBase<T>.ToString
+  fullName.vb: CG.Business.Models.ModelBase(Of T).ToString
+  nameWithType: ModelBase<T>.ToString
+  nameWithType.vb: ModelBase(Of T).ToString
 - uid: CG.Business.Repositories
   name: CG.Business.Repositories
   href: api/CG.Business.Repositories.html
@@ -32,48 +121,48 @@ references:
   fullName: CG.Business.Repositories.RepositoryBase
   nameWithType: RepositoryBase
 - uid: CG.Business.Repositories.RepositoryBase`1
-  name: RepositoryBase<TSettings>
+  name: RepositoryBase<TOptions>
   href: api/CG.Business.Repositories.RepositoryBase-1.html
   commentId: T:CG.Business.Repositories.RepositoryBase`1
-  name.vb: RepositoryBase(Of TSettings)
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings>
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings)
-  nameWithType: RepositoryBase<TSettings>
-  nameWithType.vb: RepositoryBase(Of TSettings)
+  name.vb: RepositoryBase(Of TOptions)
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions>
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions)
+  nameWithType: RepositoryBase<TOptions>
+  nameWithType.vb: RepositoryBase(Of TOptions)
 - uid: CG.Business.Repositories.RepositoryBase`1.#ctor(`0)
-  name: RepositoryBase(TSettings)
+  name: RepositoryBase(TOptions)
   href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1__ctor__0_
   commentId: M:CG.Business.Repositories.RepositoryBase`1.#ctor(`0)
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings>.RepositoryBase(TSettings)
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings).RepositoryBase(TSettings)
-  nameWithType: RepositoryBase<TSettings>.RepositoryBase(TSettings)
-  nameWithType.vb: RepositoryBase(Of TSettings).RepositoryBase(TSettings)
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions>.RepositoryBase(TOptions)
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions).RepositoryBase(TOptions)
+  nameWithType: RepositoryBase<TOptions>.RepositoryBase(TOptions)
+  nameWithType.vb: RepositoryBase(Of TOptions).RepositoryBase(TOptions)
 - uid: CG.Business.Repositories.RepositoryBase`1.#ctor*
   name: RepositoryBase
   href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1__ctor_
   commentId: Overload:CG.Business.Repositories.RepositoryBase`1.#ctor
   isSpec: "True"
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings>.RepositoryBase
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings).RepositoryBase
-  nameWithType: RepositoryBase<TSettings>.RepositoryBase
-  nameWithType.vb: RepositoryBase(Of TSettings).RepositoryBase
-- uid: CG.Business.Repositories.RepositoryBase`1.Settings
-  name: Settings
-  href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1_Settings
-  commentId: P:CG.Business.Repositories.RepositoryBase`1.Settings
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings>.Settings
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings).Settings
-  nameWithType: RepositoryBase<TSettings>.Settings
-  nameWithType.vb: RepositoryBase(Of TSettings).Settings
-- uid: CG.Business.Repositories.RepositoryBase`1.Settings*
-  name: Settings
-  href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1_Settings_
-  commentId: Overload:CG.Business.Repositories.RepositoryBase`1.Settings
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions>.RepositoryBase
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions).RepositoryBase
+  nameWithType: RepositoryBase<TOptions>.RepositoryBase
+  nameWithType.vb: RepositoryBase(Of TOptions).RepositoryBase
+- uid: CG.Business.Repositories.RepositoryBase`1.Options
+  name: Options
+  href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1_Options
+  commentId: P:CG.Business.Repositories.RepositoryBase`1.Options
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions>.Options
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions).Options
+  nameWithType: RepositoryBase<TOptions>.Options
+  nameWithType.vb: RepositoryBase(Of TOptions).Options
+- uid: CG.Business.Repositories.RepositoryBase`1.Options*
+  name: Options
+  href: api/CG.Business.Repositories.RepositoryBase-1.html#CG_Business_Repositories_RepositoryBase_1_Options_
+  commentId: Overload:CG.Business.Repositories.RepositoryBase`1.Options
   isSpec: "True"
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings>.Settings
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings).Settings
-  nameWithType: RepositoryBase<TSettings>.Settings
-  nameWithType.vb: RepositoryBase(Of TSettings).Settings
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions>.Options
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions).Options
+  nameWithType: RepositoryBase<TOptions>.Options
+  nameWithType.vb: RepositoryBase(Of TOptions).Options
 - uid: CG.Business.Repositories.RepositoryBase`2
   name: RepositoryBase<TEntity, TModel>
   href: api/CG.Business.Repositories.RepositoryBase-2.html
@@ -118,48 +207,48 @@ references:
   nameWithType: RepositoryBase<TEntity, TModel>.ToModel
   nameWithType.vb: RepositoryBase(Of TEntity, TModel).ToModel
 - uid: CG.Business.Repositories.RepositoryBase`3
-  name: RepositoryBase<TSettings, TEntity, TModel>
+  name: RepositoryBase<TOptions, TEntity, TModel>
   href: api/CG.Business.Repositories.RepositoryBase-3.html
   commentId: T:CG.Business.Repositories.RepositoryBase`3
-  name.vb: RepositoryBase(Of TSettings, TEntity, TModel)
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings, TEntity, TModel>
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings, TEntity, TModel)
-  nameWithType: RepositoryBase<TSettings, TEntity, TModel>
-  nameWithType.vb: RepositoryBase(Of TSettings, TEntity, TModel)
+  name.vb: RepositoryBase(Of TOptions, TEntity, TModel)
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions, TEntity, TModel>
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions, TEntity, TModel)
+  nameWithType: RepositoryBase<TOptions, TEntity, TModel>
+  nameWithType.vb: RepositoryBase(Of TOptions, TEntity, TModel)
 - uid: CG.Business.Repositories.RepositoryBase`3.#ctor(`0)
-  name: RepositoryBase(TSettings)
+  name: RepositoryBase(TOptions)
   href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3__ctor__0_
   commentId: M:CG.Business.Repositories.RepositoryBase`3.#ctor(`0)
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings, TEntity, TModel>.RepositoryBase(TSettings)
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings, TEntity, TModel).RepositoryBase(TSettings)
-  nameWithType: RepositoryBase<TSettings, TEntity, TModel>.RepositoryBase(TSettings)
-  nameWithType.vb: RepositoryBase(Of TSettings, TEntity, TModel).RepositoryBase(TSettings)
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions, TEntity, TModel>.RepositoryBase(TOptions)
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions, TEntity, TModel).RepositoryBase(TOptions)
+  nameWithType: RepositoryBase<TOptions, TEntity, TModel>.RepositoryBase(TOptions)
+  nameWithType.vb: RepositoryBase(Of TOptions, TEntity, TModel).RepositoryBase(TOptions)
 - uid: CG.Business.Repositories.RepositoryBase`3.#ctor*
   name: RepositoryBase
   href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3__ctor_
   commentId: Overload:CG.Business.Repositories.RepositoryBase`3.#ctor
   isSpec: "True"
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings, TEntity, TModel>.RepositoryBase
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings, TEntity, TModel).RepositoryBase
-  nameWithType: RepositoryBase<TSettings, TEntity, TModel>.RepositoryBase
-  nameWithType.vb: RepositoryBase(Of TSettings, TEntity, TModel).RepositoryBase
-- uid: CG.Business.Repositories.RepositoryBase`3.Settings
-  name: Settings
-  href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3_Settings
-  commentId: P:CG.Business.Repositories.RepositoryBase`3.Settings
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings, TEntity, TModel>.Settings
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings, TEntity, TModel).Settings
-  nameWithType: RepositoryBase<TSettings, TEntity, TModel>.Settings
-  nameWithType.vb: RepositoryBase(Of TSettings, TEntity, TModel).Settings
-- uid: CG.Business.Repositories.RepositoryBase`3.Settings*
-  name: Settings
-  href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3_Settings_
-  commentId: Overload:CG.Business.Repositories.RepositoryBase`3.Settings
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions, TEntity, TModel>.RepositoryBase
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions, TEntity, TModel).RepositoryBase
+  nameWithType: RepositoryBase<TOptions, TEntity, TModel>.RepositoryBase
+  nameWithType.vb: RepositoryBase(Of TOptions, TEntity, TModel).RepositoryBase
+- uid: CG.Business.Repositories.RepositoryBase`3.Options
+  name: Options
+  href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3_Options
+  commentId: P:CG.Business.Repositories.RepositoryBase`3.Options
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions, TEntity, TModel>.Options
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions, TEntity, TModel).Options
+  nameWithType: RepositoryBase<TOptions, TEntity, TModel>.Options
+  nameWithType.vb: RepositoryBase(Of TOptions, TEntity, TModel).Options
+- uid: CG.Business.Repositories.RepositoryBase`3.Options*
+  name: Options
+  href: api/CG.Business.Repositories.RepositoryBase-3.html#CG_Business_Repositories_RepositoryBase_3_Options_
+  commentId: Overload:CG.Business.Repositories.RepositoryBase`3.Options
   isSpec: "True"
-  fullName: CG.Business.Repositories.RepositoryBase<TSettings, TEntity, TModel>.Settings
-  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TSettings, TEntity, TModel).Settings
-  nameWithType: RepositoryBase<TSettings, TEntity, TModel>.Settings
-  nameWithType.vb: RepositoryBase(Of TSettings, TEntity, TModel).Settings
+  fullName: CG.Business.Repositories.RepositoryBase<TOptions, TEntity, TModel>.Options
+  fullName.vb: CG.Business.Repositories.RepositoryBase(Of TOptions, TEntity, TModel).Options
+  nameWithType: RepositoryBase<TOptions, TEntity, TModel>.Options
+  nameWithType.vb: RepositoryBase(Of TOptions, TEntity, TModel).Options
 - uid: CG.Business.Repositories.RepositoryException
   name: RepositoryException
   href: api/CG.Business.Repositories.RepositoryException.html
@@ -307,92 +396,3 @@ references:
   isSpec: "True"
   fullName: CG.Business.Stores.StoreException.StoreException
   nameWithType: StoreException.StoreException
-- uid: CG.Models
-  name: CG.Models
-  href: api/CG.Models.html
-  commentId: N:CG.Models
-  fullName: CG.Models
-  nameWithType: CG.Models
-- uid: CG.Models.ModelBase
-  name: ModelBase
-  href: api/CG.Models.ModelBase.html
-  commentId: T:CG.Models.ModelBase
-  fullName: CG.Models.ModelBase
-  nameWithType: ModelBase
-- uid: CG.Models.ModelBase`1
-  name: ModelBase<T>
-  href: api/CG.Models.ModelBase-1.html
-  commentId: T:CG.Models.ModelBase`1
-  name.vb: ModelBase(Of T)
-  fullName: CG.Models.ModelBase<T>
-  fullName.vb: CG.Models.ModelBase(Of T)
-  nameWithType: ModelBase<T>
-  nameWithType.vb: ModelBase(Of T)
-- uid: CG.Models.ModelBase`1.Equals(System.Object)
-  name: Equals(Object)
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_Equals_System_Object_
-  commentId: M:CG.Models.ModelBase`1.Equals(System.Object)
-  fullName: CG.Models.ModelBase<T>.Equals(System.Object)
-  fullName.vb: CG.Models.ModelBase(Of T).Equals(System.Object)
-  nameWithType: ModelBase<T>.Equals(Object)
-  nameWithType.vb: ModelBase(Of T).Equals(Object)
-- uid: CG.Models.ModelBase`1.Equals*
-  name: Equals
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_Equals_
-  commentId: Overload:CG.Models.ModelBase`1.Equals
-  isSpec: "True"
-  fullName: CG.Models.ModelBase<T>.Equals
-  fullName.vb: CG.Models.ModelBase(Of T).Equals
-  nameWithType: ModelBase<T>.Equals
-  nameWithType.vb: ModelBase(Of T).Equals
-- uid: CG.Models.ModelBase`1.GetHashCode
-  name: GetHashCode()
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_GetHashCode
-  commentId: M:CG.Models.ModelBase`1.GetHashCode
-  fullName: CG.Models.ModelBase<T>.GetHashCode()
-  fullName.vb: CG.Models.ModelBase(Of T).GetHashCode()
-  nameWithType: ModelBase<T>.GetHashCode()
-  nameWithType.vb: ModelBase(Of T).GetHashCode()
-- uid: CG.Models.ModelBase`1.GetHashCode*
-  name: GetHashCode
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_GetHashCode_
-  commentId: Overload:CG.Models.ModelBase`1.GetHashCode
-  isSpec: "True"
-  fullName: CG.Models.ModelBase<T>.GetHashCode
-  fullName.vb: CG.Models.ModelBase(Of T).GetHashCode
-  nameWithType: ModelBase<T>.GetHashCode
-  nameWithType.vb: ModelBase(Of T).GetHashCode
-- uid: CG.Models.ModelBase`1.Id
-  name: Id
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_Id
-  commentId: P:CG.Models.ModelBase`1.Id
-  fullName: CG.Models.ModelBase<T>.Id
-  fullName.vb: CG.Models.ModelBase(Of T).Id
-  nameWithType: ModelBase<T>.Id
-  nameWithType.vb: ModelBase(Of T).Id
-- uid: CG.Models.ModelBase`1.Id*
-  name: Id
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_Id_
-  commentId: Overload:CG.Models.ModelBase`1.Id
-  isSpec: "True"
-  fullName: CG.Models.ModelBase<T>.Id
-  fullName.vb: CG.Models.ModelBase(Of T).Id
-  nameWithType: ModelBase<T>.Id
-  nameWithType.vb: ModelBase(Of T).Id
-- uid: CG.Models.ModelBase`1.ToString
-  name: ToString()
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_ToString
-  commentId: M:CG.Models.ModelBase`1.ToString
-  fullName: CG.Models.ModelBase<T>.ToString()
-  fullName.vb: CG.Models.ModelBase(Of T).ToString()
-  nameWithType: ModelBase<T>.ToString()
-  nameWithType.vb: ModelBase(Of T).ToString()
-- uid: CG.Models.ModelBase`1.ToString*
-  name: ToString
-  href: api/CG.Models.ModelBase-1.html#CG_Models_ModelBase_1_ToString_
-  commentId: Overload:CG.Models.ModelBase`1.ToString
-  isSpec: "True"
-  fullName: CG.Models.ModelBase<T>.ToString
-  fullName.vb: CG.Models.ModelBase(Of T).ToString
-  nameWithType: ModelBase<T>.ToString
-  nameWithType.vb: ModelBase(Of T).ToString
