--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -23,9 +23,8 @@ Platforms supported:
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CG.Core" Version="2020.6.25" />
-    <PackageReference Include="CG.DataAnnotations" Version="2020.1.20" />
-    <PackageReference Include="CG.Validations" Version="2020.1.39" />
+    <PackageReference Include="CG.Core" Version="2020.6.34" />
+    <PackageReference Include="CG.Options" Version="2020.1.5" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
