--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -6,7 +6,6 @@
     <Description>This package contains business related abstractions used by other CodeGator packages. 
 
 Platforms supported:
-      .NET 4.61 or above
       .NET Standard 2.0 or above</Description>
     <Company>CodeGator</Company>
     <Authors>Martin Cook</Authors>
@@ -16,6 +15,9 @@ Platforms supported:
     <PackageProjectUrl>https://github.com/CodeGator/CG.Business</PackageProjectUrl>
     <PackageTags>business, abstrations, CG.Busness, CodeGator</PackageTags>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/CodeGator/CG.Business</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,12 +25,19 @@ Platforms supported:
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CG.Core" Version="2020.6.35" />
-    <PackageReference Include="CG.Options" Version="2020.1.14" />
+    <PackageReference Include="CG.Core" Version="2020.6.41" />
+    <PackageReference Include="CG.Options" Version="2020.1.16" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\packageDefaultIcon-50x50.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
